--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dev": "nodemon index"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "wizard",
+  "license": "ISC",
+  "type": "module"
 }
